--- a/main.html
+++ b/main.html
@@ -36,8 +36,8 @@
 
     <!-- Input -->
     <div>
-        <input data-ns-test="block-inline-input" value="Test1" />
-        <input data-ns-test="block-inline-input" value="Test2" />
+        <input data-ns-test="block-inline-input" type="text" value="Test1">
+        <input data-ns-test="block-inline-input" type="text" value="Test2">
     </div>
     Answer: Inline
 
