--- a/main.html
+++ b/main.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <title>Block or Inline</title>
 </head>
-
 <body>
     <!-- Button -->
     <div>
@@ -75,8 +73,5 @@
         <sub data-ns-test="block-inline-sub">Test2</sub>
     </div>
     Answer: Inline
-
-    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
